--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body{
     font-family: 'Kanit', sans-serif;
     font-family: 'Roboto', sans-serif;
-    background-image: url(/backgorund2.jpg);
+    background-image: url(/assets/img/backgorund2.jpg);
     background-size: cover;
     height: 100vh;
 }
